# Software-Engineering-Spring-22-4

CS20202-Assignments/3/: Fraction_test.h  MixedUDT.cpp  Poly.h  Poly_test.h
CS20202-Theory/2/: Q1.cpp  Q2.cpp
CS20202-Theory/3/: Fraction.h  Int.h  Int_test.h  Tester.cpp
CS29202-Laboratory/1/: MedicalNetwork.java
CS29202-Laboratory/2/: assgn2.cpp  assgn2.hpp  compile_run.sh  readme.txt  utils.cpp
CS29202-Laboratory/3/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CS29202-Laboratory/3/Python_DS_Assignment/: main.py  setup.py
CS29202-Laboratory/3/Python_DS_Assignment (copy with .toml)/: setup.cfg
CS29202-Laboratory/3/Python_DS_Assignment (copy with .toml)/my_package/analysis/: visualize.py
CS29202-Laboratory/3/Python_DS_Assignment (copy with .toml)/my_package/data/: dataset.py
CS29202-Laboratory/3/Python_DS_Assignment (copy with .toml)/my_package/data/transforms/: crop.py  flip.py  rescale.py
CS29202-Laboratory/3/Python_DS_Assignment (copy with .toml)/my_package_tfjuror.egg-info/: PKG-INFO  SOURCES.txt
CS29202-Laboratory/3/Python_DS_Assignment/my_package/analysis/: visualize.py
CS29202-Laboratory/4/Python_Tkinter_Assignment/: ImageViewerGUI.py
CS29202-Laboratory/4/Python_Tkinter_Assignment/my_package/analysis/: visualize.py
CS29202-Laboratory/4/Python_Tkinter_Assignment/my_package/data/: dataset.py
CS29202-Laboratory/4/Python_Tkinter_Assignment/my_package/data/transforms/: blur.py  rotate.py
CS29202-Laboratory/6/Group27_Testing/: unittests_for_website.py
