[metadata]
name = my_package-tfjuror
version = 0.0.1
author = Rohit Ranjan
author_email = ranjanmail.rohit@gmail.com
description = SE Lab Assignment 3
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .